--- a/templates/list_tickets.j2
+++ b/templates/list_tickets.j2
@@ -1,27 +1,45 @@
 {% for chat in tickets | groupby('chat_name') -%}
-🏷 **КАНАЛ: {{ chat.grouper | upper }}**
+🏷 **КАНАЛ: {{ chat.grouper | upper | replace('-', '\-') }}**
 ━━━━━━━━━━━━━━━━━━
 {% set ow_tickets = chat.list | selectattr('date_end', 'none') | list -%}
 {% set rt_tickets = chat.list | rejectattr('date_end', 'none') | list -%}
 
-{# --- В одну сторону --- #}
+{# --- В ОДНУ СТОРОНУ --- #}
+{% if ow_tickets -%}
+**➡️ В одну сторону:**
 {% for route in ow_tickets | groupby('group_key_simple') -%}
 {% set first = route.list[0] -%}
 📍 {{ first.route_from | iata_to_ru }} ➔ {{ first.route_to | iata_to_ru }}
 {% for t in route.list -%}
-🗓 {{ t.date_start.strftime('%d.%m') }}{% if t.airline %} ({{ t.airline }}){% endif %}  —  💰 **{{ t.price }} {{ t.currency }}** [👉 Взять](https://t.me/{{ t.chat_name }}/{{ t.message_id }})
+{% set price_fmt = "{:,}".format(t.price).replace(',', ' ') -%}
+🗓 {{ t.date_start.strftime('%d.%m') }}{% if t.airline %} ({{ t.airline | replace('-', '\-') }}){% endif %} — {% if t.prev_price and t.prev_price != t.price -%}
+{% set prev_price_fmt = "{:,}".format(t.prev_price).replace(',', ' ') -%}
+💰 ~~{{ prev_price_fmt }}~~ **{{ price_fmt }} {{ t.currency }}** {% if t.price < t.prev_price %}📉{% else %}📈{% endif %}
+{%- else -%}
+💰 **{{ price_fmt }} {{ t.currency }}**
+{%- endif %} [👉 Взять](https://t.me/{{ t.chat_name }}/{{ t.message_id }})
 {% endfor -%}
 {% endfor -%}
-
-{% if ow_tickets and rt_tickets %}
 {% endif %}
-{# --- Туда-Обратно --- #}
-{%- for route in rt_tickets | groupby('group_key_simple') -%}
+
+{# --- ТУДА-ОБРАТНО --- #}
+{% if rt_tickets -%}
+{% if ow_tickets %}
+{% endif -%}
+**🔄 Туда-обратно:**
+{% for route in rt_tickets | groupby('group_key_simple') -%}
 {% set first = route.list[0] -%}
 📍 {{ first.route_from | iata_to_ru }} ➔ {{ first.route_to | iata_to_ru }} ➔ {{ first.route_from | iata_to_ru }}
 {% for t in route.list -%}
 {% set nights = (t.date_end - t.date_start).days -%}
-🗓 {{ t.date_start.strftime('%d.%m') }} - {{ t.date_end.strftime('%d.%m') }} ({{ nights }}н){% if t.airline %} [{{ t.airline }}]{% endif %}  —  💰 **{{ t.price }} {{ t.currency }}** [👉 Взять](https://t.me/{{ t.chat_name }}/{{ t.message_id }})
+{% set price_fmt = "{:,}".format(t.price).replace(',', ' ') -%}
+🗓 {{ t.date_start.strftime('%d.%m') }} - {{ t.date_end.strftime('%d.%m') }} ({{ nights }}н){% if t.airline %} [{{ t.airline | replace('-', '\-') }}]{% endif %} — {% if t.prev_price and t.prev_price != t.price -%}
+{% set prev_price_fmt = "{:,}".format(t.prev_price).replace(',', ' ') -%}
+💰 ~~{{ prev_price_fmt }}~~ **{{ price_fmt }} {{ t.currency }}** {% if t.price < t.prev_price %}📉{% else %}📈{% endif %}
+{%- else -%}
+💰 **{{ price_fmt }} {{ t.currency }}**
+{%- endif %} [👉 Взять](https://t.me/{{ t.chat_name }}/{{ t.message_id }})
 {% endfor -%}
 {% endfor -%}
+{% endif %}
 {% endfor -%}
